tests/trybuild/stages/unexpected_command_with_colon.rs
use brood::system::schedule::stages;

type Stages = stages!{
    unexpected: value,
};

fn main() {}
